welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:17: error: value breen is not a member of object java.awt.Color
	faireV(Color.breen);
                     ^